suite/tests/functions/valid/func-decl-in-func.c
int main(void)
{
    int add(int a, int b);

    return add(1, 2);
}

int add(int a, int b)
{
    return a + b;
}