suite/tests/functions/invalid/func-plist-change.c
int foo(int a);
int foo(int a, int b);

